--- a/web-application/src/index.css
+++ b/web-application/src/index.css
@@ -1,10 +1,36 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@layer base {
+  /* h1 {
+    @apply m-0;
+  } */
+}
 
 @layer components {
-    .my-custom-style {
-      color: rgb(177, 234, 46);
-      @apply text-2xl font-bold;
-    }
+  .btn {
+    @apply bg-blue-500 text-white font-bold px-2 py-1 rounded hover:bg-blue-600 transition-colors;
   }
+  .btn-green {
+    @apply bg-green-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-green-600 transition-colors;
+  }
+
+  .product-card-btn{
+    @apply mt-2 bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 transition-colors;
+  }
+
+  .card-layout{
+    @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6;
+  }
+}
+
+@layer utilities {
+  .logo {
+    @apply font-bold text-2xl text-lime-500;
+  }
+  .avtar {
+    @apply w-20 h-20 flex items-center justify-center rounded-full border text-3xl font-bold bg-blue-500 text-white;    
+  }
+  .boundary{
+    @apply px-6 md:px-16 lg:px-24 xl:px-32;
+  }
+}
